-------------------------- aqp 0.95 (2010-09-15) --------------------------
* added VERY experimental support for parallel processing based on the latest versions
  of plyr, doMC, and foreach packages
* updated vignette with technical details on aggregation and dissimilarity computation


-------------------------- aqp 0.94 (2010-08-11) --------------------------
* fixed bug in soil.slot() when aggregating a categorical variable,
  with a user-supplied segmenting vector
* soil.slot() now requires that categorical variables be encoded as factors

-------------------------- aqp 0.93 (2010-08-07) --------------------------
* bug fixes, new documentation + examples
* AQP now requires R >= 2.9.0

-------------------------- aqp 0.92 (2010-08-03) --------------------------
* including a new column in the results from soil.slot(), 
  denoting number of profiles used in slice-wise aggregation
* added note to soil.slot() manual page highlighting possible problems with SD calculation

-------------------------- aqp 0.90 (2010-07-13) --------------------------
* better error checking on profile aggregation and classification functions
* most functions now require that horizon depths are integers

-------------------------- aqp 0.89 (2010-07-10) --------------------------
* added plot_distance_graph() function for visualizing between-profile dissimilarity
* updated documentation: extended manual is now accessible as a vignette
* major improvements in profile_compare() when add_soil_flag=TRUE and replace_na=TRUE
| appears to create much more realistic groupings when there are both shallow and
| deep soils in the collection
+---> new functionality requires further testing
* plotting under dendrograms generated by ape::plot.phylo() may need some manual adjustments


-------------------------- aqp 0.88 (2010-07-06) --------------------------
* new version of plyr (1.0) should speed up most functions in aqp pacakge 